Change display for #faceted-form .widget-fieldset form.

--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -355,6 +355,7 @@ ul.navTreeLevel0 li.sfHover a{
 #top-actions .top-menu-action{
     display: inline-block;
     vertical-align: top;
+    font-size: 100%;
 }
 #social-viewlet,
 #portal-personaltools-wrapper,
@@ -421,9 +422,6 @@ a.btn-search {
 #portal-personaltools{
     font-size: 100%;
 }
-dl.actionMenu.activated dt a{
-    margin:0 0.25em;
-}
 #top-actions .top-menu-action dd a {
     line-height: 2em;
     padding: 0 0.75em;
@@ -444,6 +442,9 @@ dl.actionMenu.activated dt a{
 
 .main-homepage.template-folderview #content {
     margin: 0 auto;
+}
+#portal-personaltools dd{
+    background: #000000;
 }
 //Bloc zoom par défaut
 
@@ -935,6 +936,9 @@ dl.actionMenu.activated dt a{
     padding-right: 0;
     width: 15em !important;
 }
+.faceted-text-widget.section-search input{
+    padding: 0.3em;
+}
 #faceted-form input.hasDatepicker {
     width: 7em !important;
 }
@@ -955,7 +959,7 @@ dl.actionMenu.activated dt a{
 #faceted-form .section-tarification {
     display: none !important;
 }
-#faceted-form .widget-fieldset form {
+#visual-portal-wrapper #faceted-form .widget-fieldset form {
     display: flex;
 }
 
