add css for navigation in english

--- a/cpskin/diazotheme/spirit/static/less/minisites.less
+++ b/cpskin/diazotheme/spirit/static/less/minisites.less
@@ -120,13 +120,17 @@
     clear: both;
 }
 
-.subsection-culture-musees-la-boverie .banner, .subsection-kultur-museen-la-boverie .banner,
-.subsection-cultuur-musea-la-boverie .banner, .subsection-culture-museums-la-boverie .banner {
+.subsection-culture-musees-la-boverie .banner,
+.subsection-kultur-museen-la-boverie .banner,
+.subsection-cultuur-musea-la-boverie .banner,
+.subsection-culture-museums-la-boverie .banner {
     visibility: hidden;
 }
 
-.subsection-culture-musees-la-boverie #minisite-logo, .subsection-kultur-museen-la-boverie #minisite-logo,
-.subsection-cultuur-musea-la-boverie #minisite-logo, .subsection-culture-museums-la-boverie #minisite-logo{
+.subsection-culture-musees-la-boverie #minisite-logo,
+.subsection-kultur-museen-la-boverie #minisite-logo,
+.subsection-cultuur-musea-la-boverie #minisite-logo,
+.subsection-culture-museums-la-boverie #minisite-logo{
     padding-left: 0;
     margin-top: -1em;
 }
@@ -237,14 +241,18 @@ body.subsection-culture-museums-la-boverie #visual-portal-wrapper {
     border-bottom: 0 solid #eaeaea;
 }
 
-.subsection-culture-musees-la-boverie .acces .results, .subsection-kultur-museen-la-boverie .acces .results,
-.subsection-cultuur-musea-la-boverie .acces .results, .subsection-culture-museums-la-boverie .acces .results{
+.subsection-culture-musees-la-boverie .acces .results,
+.subsection-kultur-museen-la-boverie .acces .results,
+.subsection-cultuur-musea-la-boverie .acces .results,
+.subsection-culture-museums-la-boverie .acces .results{
     padding-left:0;
     width:103%;
 }
 
-.subsection-culture-musees-la-boverie #content li.bloc-item, .subsection-kultur-museen-la-boverie #content li.bloc-item,
-.subsection-cultuur-musea-la-boverie #content li.bloc-item, .subsection-culture-museums-la-boverie #content li.bloc-item {
+.subsection-culture-musees-la-boverie #content li.bloc-item,
+.subsection-kultur-museen-la-boverie #content li.bloc-item,
+.subsection-cultuur-musea-la-boverie #content li.bloc-item,
+.subsection-culture-museums-la-boverie #content li.bloc-item {
     margin-bottom: 1em;
     margin-right: 2%;
     max-height: none;
@@ -336,7 +344,8 @@ color:white;
 }
 .subsection-culture-musees-la-boverie #minisite-globalnav li a,
 .subsection-kultur-museen-la-boverie #minisite-globalnav li a,
-.subsection-cultuur-musea-la-boverie #minisite-globalnav li a{
+.subsection-cultuur-musea-la-boverie #minisite-globalnav li a,
+.subsection-culture-museums-la-boverie #minisite-globalnav li a{
     padding: 1em;
     background-color: transparent;
     color: #f5f5f5;
@@ -349,7 +358,8 @@ color:white;
 
 .subsection-culture-musees-la-boverie .container-minisite-globalnav-logo ,
 .subsection-kultur-museen-la-boverie .container-minisite-globalnav-logo ,
-.subsection-cultuur-musea-la-boverie .container-minisite-globalnav-logo {
+.subsection-cultuur-musea-la-boverie .container-minisite-globalnav-logo ,
+.subsection-culture-museums-la-boverie .container-minisite-globalnav-logo{
     background: #000;
     float: left;
     width: 100%;
@@ -357,13 +367,15 @@ color:white;
 
 .subsection-culture-musees-la-boverie #minisite-actions a ,
 .subsection-kultur-museen-la-boverie #minisite-actions a ,
-.subsection-cultuur-musea-la-boverie #minisite-actions a {
+.subsection-cultuur-musea-la-boverie #minisite-actions a ,
+.subsection-culture-museums-la-boverie #minisite-actions a{
     color: #fff;
 }
 
 .subsection-culture-musees-la-boverie #minisite-globalnav .minisite-home,
 .subsection-kultur-museen-la-boverie #minisite-globalnav .minisite-home ,
-.subsection-cultuur-musea-la-boverie #minisite-globalnav .minisite-home {
+.subsection-cultuur-musea-la-boverie #minisite-globalnav .minisite-home ,
+.subsection-culture-museums-la-boverie #minisite-globalnav .minisite-home{
     display: none;
 }
 
