change css for event to mini site

--- a/cpskin/diazotheme/spirit/static/less/minisites.less
+++ b/cpskin/diazotheme/spirit/static/less/minisites.less
@@ -431,3 +431,14 @@ color:white;
 .in-minisite-out-portal.subsection-culture-museums-la-boverie #footer-sitemap{
   display: none;
 }
+//view event
+.portaltype-event.subsection-culture-musees-la-boverie .event.summary.details,
+.portaltype-event.subsection-culture-musees-la-boverie #leaflet-content-viewlet,
+.portaltype-event.subsection-kultur-museen-la-boverie .event.summary.details,
+.portaltype-event.subsection-kultur-museen-la-boverie #leaflet-content-viewlet,
+.portaltype-event.subsection-cultuur-musea-la-boverie .event.summary.details,
+.portaltype-event.subsection-cultuur-musea-la-boverie #leaflet-content-viewlet,
+.portaltype-event.subsection-culture-museums-la-boverie .event.summary.details,
+.portaltype-event.subsection-culture-museums-la-boverie #leaflet-content-viewlet {
+    display: none;
+}
