--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -44,6 +44,9 @@ figure.image figcaption {
     max-width: 100%;
     width: 100%;
 }
+#top-banner #top-description{
+    display: none;
+}
 #top-logo-slogan-actions {
     color: @front;
     top:0;
