--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -81,6 +81,14 @@ h2 a {
 #content #flex #carousel-index.flexslider a:link {
     color: #000 !important;
 }
+#top-banner::before {
+    content: "";
+    display: block;
+    background-color: rgba(255,255,255,0.5);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
 #top-banner #top-description {
     position: absolute;
     width: 100%;
@@ -89,17 +97,25 @@ h2 a {
     color: #000;
     display: block !important;
 }
+#top-slogan-inner #cpskin-slogan-titre{
+    display: none;
+}
 #top-banner #cpskin-slogan-titre {
     display: block;
     text-transform: uppercase;
     font-size: 2em;
     font-weight: 400;
 }
-#top-banner #cpskin-slogan-titre:after{
-    content:"";
+#top-banner #cpskin-slogan-titre::after {
+    content: "";
     display: block;
-    border-bottom: 2px solid @black;
+    border-bottom: 2px solid #000000;
+    width: 2em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.5em;
 }
 #top-banner #cpskin-slogan-description {
     font-size: 1em;
+    margin-top: 3em;
 }
