--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -245,10 +245,50 @@ h2 a {
     margin-bottom: 3em;
 }
 .portaltype-project #content #slider {
-    width:"100%";
+    width:100%;
+    margin-bottom: 0.5em;
 }
 .portaltype-project #content #slider .img{
-    width:"100%";
-    height: "200px";
+    width:100%;
+    height: 200px;
     border: 2px solid red;
+}
+//VIEW FACETED PROJECT
+.width-full .faceted-projects-ungrouped-view .event-entry {
+    box-shadow: 4px 5px 7px #d1d1d1;
+    width: calc((100% - 4%) / 3);
+}
+.width-full .faceted-projects-ungrouped-view .event-entry:nth-child(3n) {
+    margin-right: 0;
+}
+.faceted-projects-ungrouped-view .pageleadImage {
+    padding-bottom: 66%;
+}
+.faceted-projects-ungrouped-view .pagecaption{
+    border: 1px solid #f2f2f2;
+    border-top: none;
+    box-sizing: border-box;
+    padding: 0.5em;
+}
+.faceted-projects-ungrouped-view .pagecaption h3{
+    font-family: open sans;
+    font-size: 1em;
+    font-weight: normal;
+}
+#content .faceted-sorting-widget .widget-fieldset {
+    margin-top: 1.5em;
+}
+#visual-portal-wrapper #faceted-form .faceted-sorting-widget form {
+    flex-flow: column;
+}
+#content .faceted-sorting-widget select{
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    background: #ffffff !important;
+    height: 35px;
+    border: none !important;
+    line-height: 35px;
+    color: gray;
+    padding: 0.2em 1em;
+    font-size: 0.9em;
 }
