change css for faceted view

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -255,13 +255,13 @@ h2 a {
 }
 //VIEW FACETED PROJECT
 .width-full .faceted-projects-ungrouped-view .event-entry {
-    box-shadow: 4px 5px 7px #d1d1d1;
     width: calc((100% - 4%) / 3);
 }
 .width-full .faceted-projects-ungrouped-view .event-entry:nth-child(3n) {
     margin-right: 0;
 }
 .faceted-projects-ungrouped-view .pageleadImage {
+    border-bottom: 1.5em solid @theme;
     padding-bottom: 66%;
 }
 .faceted-projects-ungrouped-view .pagecaption{
