change display for slogan

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -104,10 +104,14 @@ h2 a {
     color: #000;
     display: block !important;
 }
-#top-slogan-inner #cpskin-slogan-titre,
 #top-banner #cpskin-slogan-titre,
-#top-banner #cpskin-slogan-description{
+#top-banner #cpskin-slogan-description,
+#top-slogan-inner #cpskin-slogan-description{
     display: none;
+}
+#top-slogan-inner #cpskin-slogan-titre{
+    display: block;
+    font-size: 125%;
 }
 .main-homepage #top-banner #cpskin-slogan-titre {
     display: block;
