--- a/cpskin/diazotheme/spirit/static/less/variables.less
+++ b/cpskin/diazotheme/spirit/static/less/variables.less
@@ -15,4 +15,8 @@
 @voir-tout-black:#262626;
 @bg-nav-fac: #f1efef;
 @pagination-color-current: #d7004e;
-
+//MINI SITE
+@theme-creafarm: #34b78f;
+@theme-potager: #fd9864;
+@theme-acheter-local: #4a967f;
+@theme-professionnel: #ad6a48;
