--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -7,6 +7,7 @@
     display: inline-block;
     vertical-align: middle;
     padding: 0;
+    width: 30%;
 }
 #top-logo {
     margin-left: 0;
@@ -209,12 +210,13 @@ h2 a {
 .portaltype-project #content .field {
     margin-bottom: 3em;
 }
-//Timeline 2
+//Timeline
 @max-steps-timeline: 10;
 .style-step(@index) when (@index > 0) {
     &.steps_@{index}{
         & {
             margin: 4em 0;
+            text-align: center;
         }
         & li {
             display: inline-block !important;
@@ -225,6 +227,7 @@ h2 a {
         #timeline-line,
         #timeline-text{
             margin: 0 0 1em 0 !important;
+            display: inline;
         }
         #timeline-line li{
             position: relative;
@@ -260,16 +263,22 @@ h2 a {
             height: 100%;
             top: 50%;
         }
-        li.current,
-        li.current ~ li{
+        li.current{
             .step::after{
-                border-top: 2px dotted @theme;
                 opacity: 0.3;
+                border-top: 2px dotted @theme;
+                margin-left: 1.2em;
             }
         }
         li.current ~ li{
+            margin-top: -20px;
             .step{
                 opacity: 0.3;
+                width: 1.6em;
+                &::after{
+                    border-top: 2px dotted @theme;
+                    margin-top: -0.2em;
+                }
             }
         }
         & li:last-child .step::after{
@@ -556,3 +565,96 @@ form input.dislike-button{
     padding: 0.2em 1em;
     font-size: 0.9em;
 }
+
+@media screen and (max-width: 900px) {
+    // Timeline
+    .portaltype-project #timeline{
+        & #timeline-line{
+            display: inline-block !important;
+            margin: 0 1em 0 0 !important;
+            width: 4em !important;
+            vertical-align: top;
+            & li{
+                width: 100%;
+                height: auto;
+                margin-bottom: 20px !important;
+                padding: 0 !important;
+
+                & .step{
+                    line-height: 1em;
+                    padding: 1em 0 !important;
+                    height: 2em;
+                    width: 4em;
+                    &::after{
+                        border-top: none;
+                        border-left: 2px solid @theme;
+                        display: block;
+                        position: absolute;
+                        content: "";
+                        width: 100%;
+                        height: 20px;
+                        top: 100%;
+                        left: 50%;
+                    }
+                }
+
+                &.current{
+                    .step::after{
+                        border-left: 2px dotted @theme;
+                        margin-left: 0;
+                    }
+                }
+                &.current ~ li{
+                    .step{
+                        padding: 0 !important;
+                        height: 2em;
+                        width: 2em;
+                    }
+                    .step::after{
+                        margin-top: 0;
+                        border-left: 2px dotted @theme;
+                    }
+                }
+
+            }
+        }
+        & #timeline-text{
+            display: inline-block !important;
+            margin: 0 0 0 1em 0 !important;
+            vertical-align: top;
+
+            & li{
+                display: block !important;
+                width: auto;
+                height: auto;
+                margin-bottom: 20px !important;
+                padding: 0 !important;
+                border-left: 4px solid transparent;
+                & > div {
+                    line-height: 2em;
+                    padding: 1em 0 !important;
+                    height: 2em;
+                    width: auto;
+                    text-align: left;
+                    padding: 1em 0.5em !important;
+                }
+                &.current{
+                    border-bottom: none !important;
+                    border-left: 4px solid @theme;
+                }
+                &.current ~ li{
+                    height: 2em;
+                    margin-bottom: 18px !important;
+                    div {
+                        line-height: 1.6em;
+                        padding: 0 0.5em !important;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// 600
+// 768
+// 1024
