--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -227,7 +227,8 @@ h2 a {
         #timeline-line,
         #timeline-text{
             margin: 0 0 1em 0 !important;
-            display: inline;
+            display: inline-block;
+            width: 100%;
         }
         #timeline-line li{
             position: relative;
