fix for responsive timeline
This refs IMIO ##

--- a/cpskin/diazotheme/spirit/static/less/reinventons.less
+++ b/cpskin/diazotheme/spirit/static/less/reinventons.less
@@ -571,10 +571,8 @@ form input.dislike-button{
     // Timeline
     .portaltype-project #timeline{
         & #timeline-line{
-            display: inline-block !important;
-            margin: 0 1em 0 0 !important;
-            width: 4em !important;
             vertical-align: top;
+            width: calc(20% - 1em) !important;
             & li{
                 width: 100%;
                 height: auto;
@@ -620,9 +618,8 @@ form input.dislike-button{
             }
         }
         & #timeline-text{
-            display: inline-block !important;
-            margin: 0 0 0 1em 0 !important;
             vertical-align: top;
+            width: calc(80% - 1em) !important;
 
             & li{
                 display: block !important;
